--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -135,8 +135,7 @@ a {
   align-items: center;
   justify-content: center;
   font-size: 22px;
-  color: #f9faf8;
-  background-color: #3882f6;
+  border: 2px solid #3882f6;
   border-radius: 10px;
   width: 3em;
   height: 3em;
